# job_search

./: .gitignore  README.md  main.py  pyproject.toml
src/: abs_class.py  vac_from_api.py  vac_json.py  work_with_vac.py
